--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,11 @@ body {
 }
 
 #pfp {
-    max-width: 120px;
+    max-width: 90px;
     padding: 20px;
     border-radius:25%;
     vertical-align: middle;
+    animation-timing-function: ease-in;
 }
 
 #un {
@@ -18,4 +19,12 @@ body {
     font-size: 7vw;
     vertical-align: middle;
     text-shadow: 0px 0px 15px #fff7ee;
+    animation-timing-function: ease-in;
+}
+
+#about {
+    font-family: 'Outfit', sans-serif;
+    font-size: 3vw;
+    padding-left: 15pt;
+    padding-right: 15pt;
 }
